-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b143
-
sparc
-
solaris
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8197269 | 8u192 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8195274 | 8u172 | Kevin Walls | P2 | Resolved | Fixed | b03 |
| JDK-8190039 | 8u162 | Kevin Walls | P2 | Resolved | Fixed | b04 |
| JDK-8183433 | 8u161 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8168473 | 8u152 | Kevin Walls | P2 | Closed | Fixed | b03 |
| JDK-8185195 | 8u144 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8183062 | 8u141 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8178129 | 8u131 | Kevin Walls | P2 | Closed | Fixed | b31 |
| JDK-8192187 | emb-8u161 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8168472 | 7u171 | Kevin Walls | P2 | Closed | Fixed | b01 |
| JDK-8182433 | 7u151 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8179925 | 7u141 | Kevin Walls | P2 | Closed | Fixed | b32 |
ldm set-domain cpu-arch=generic
or cpu-arch=migration-class1
the kstat info for the cpu type is set to sun4v-cpu, which java does not know about.
./java
Java HotSpot(TM) 64-Bit Server VM warning: Can't parse CPU implementation = 'SUN4V-CPU', assume generic SPARC
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/vm_version_sparc.cpp:433
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/u01/andyb/jdk9/hotspot/src/cpu/sparc/vm/vm_version_sparc.cpp:433), pid=2248, tid=2
# assert(is_T_family(features) == is_niagara(features)) failed: Niagara should be T series
the platform is actually a T4
- backported by
-
JDK-8182433 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8183062 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8183433 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8185195 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8190039 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8192187 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8195274 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8197269 java in ldoms, with cpu-arch=generic has problems
-
- Resolved
-
-
JDK-8168472 java in ldoms, with cpu-arch=generic has problems
-
- Closed
-
-
JDK-8168473 java in ldoms, with cpu-arch=generic has problems
-
- Closed
-
-
JDK-8178129 java in ldoms, with cpu-arch=generic has problems
-
- Closed
-
-
JDK-8179925 java in ldoms, with cpu-arch=generic has problems
-
- Closed
-
- blocks
-
JDK-8164002 Add a new CPU family (S_family) for SPARC S7 and above processors
-
- Closed
-
- is blocked by
-
JDK-8157141 Fix for JDK-8031290 is unnecessarily fragile
-
- Closed
-
- relates to
-
JDK-8177958 Possible uninitialized char* in vm_version_solaris_sparc.cpp
-
- Resolved
-