8165482: java in ldoms, with cpu-arch=generic has problems

Reviewed-by: dholmes, alanbur